build/log/idf_py_stdout_output_37488
[1/10] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D "D:\FIAP\sistemas tempo real\checkpoint 5\hello_world\build\bootloader\esp-idf\esptool_py" && C:\Users\pedro\.espressif\python_env\idf5.4_py3.11_env\Scripts\python.exe C:/Users/pedro/esp/v5.4.2/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 "D:/FIAP/sistemas tempo real/checkpoint 5/hello_world/build/bootloader/bootloader.bin""
Bootloader binary size 0x6570 bytes. 0xa90 bytes (9%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj 
ccache C:\Users\pedro\.espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.4.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"D:/FIAP/sistemas tempo real/checkpoint 5/hello_world/build/config" -I"D:/FIAP/sistemas tempo real/checkpoint 5/hello_world/main" -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/newlib/platform_include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/freertos/config/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/freertos/config/include/freertos -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/freertos/config/xtensa/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/freertos/esp_additions/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/esp_hw_support/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/esp_hw_support/include/soc -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/esp_hw_support/dma/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/esp_hw_support/debug_probe/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/esp_hw_support/port/esp32/. -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/esp_hw_support/port/esp32/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/heap/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/heap/tlsf -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/log/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/soc/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/soc/esp32 -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/soc/esp32/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/soc/esp32/register -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/hal/platform_port/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/hal/esp32/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/hal/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/esp_rom/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/esp_rom/esp32/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/esp_rom/esp32 -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/esp_common/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/esp_system/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/esp_system/port/soc -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/esp_system/port/include/private -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/xtensa/esp32/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/xtensa/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/xtensa/deprecated_include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/lwip/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/lwip/include/apps -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/lwip/include/apps/sntp -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/lwip/lwip/src/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/lwip/port/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/lwip/port/freertos/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/pedro/esp/v5.4.2/esp-idf/components/esp_timer/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap "-fmacro-prefix-map=D:/FIAP/sistemas tempo real/checkpoint 5/hello_world=." -fmacro-prefix-map=C:/Users/pedro/esp/v5.4.2/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\hello_world_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -c "D:/FIAP/sistemas tempo real/checkpoint 5/hello_world/main/hello_world_main.c"
D:/FIAP/sistemas tempo real/checkpoint 5/hello_world/main/hello_world_main.c: In function 'app_main':
D:/FIAP/sistemas tempo real/checkpoint 5/hello_world/main/hello_world_main.c:253:19: error: expected expression before 'const'
  253 |     esp_err_t e = const esp_task_wdt_config_t twdt_cfg = {
      |                   ^~~~~
D:/FIAP/sistemas tempo real/checkpoint 5/hello_world/main/hello_world_main.c:258:15: error: redefinition of 'e'
  258 |     esp_err_t e = esp_task_wdt_init(&twdt_cfg);
      |               ^
D:/FIAP/sistemas tempo real/checkpoint 5/hello_world/main/hello_world_main.c:253:15: note: previous definition of 'e' with type 'esp_err_t' {aka 'int'}
  253 |     esp_err_t e = const esp_task_wdt_config_t twdt_cfg = {
      |               ^
D:/FIAP/sistemas tempo real/checkpoint 5/hello_world/main/hello_world_main.c:258:38: error: 'twdt_cfg' undeclared (first use in this function)
  258 |     esp_err_t e = esp_task_wdt_init(&twdt_cfg);
      |                                      ^~~~~~~~
D:/FIAP/sistemas tempo real/checkpoint 5/hello_world/main/hello_world_main.c:258:38: note: each undeclared identifier is reported only once for each function it appears in
ninja: build stopped: subcommand failed.
